CMAKE_MINIMUM_REQUIRED(VERSION 3.5)
IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "DEBUG")
ENDIF()
SET(CMAKE_SHARED_LIBRARY_SUFFIX ".so")

FIND_PACKAGE(PythonLibs 3.6 REQUIRED)
FIND_PACKAGE(Boost COMPONENTS python)
add_definitions(-Wall)

IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
  SET(Boost_USE_STATIC_LIBS OFF)
  SET(Boost_USE_MULTITHREADED ON)
  SET(Boost_USE_STATIC_RUNTIME OFF)

  ADD_LIBRARY(address SHARED address.cpp)
  TARGET_LINK_LIBRARIES(address ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
ELSEIF(NOT Boost_FOUND)
  MESSAGE(FATAL_ERROR "Unable to find correct Boost version. Did you set BOOST_ROOT?")
ENDIF()
